refactor(movie-api): apply code quality improvements
- Replace .collect(Collectors.toList()) with .toList() and remove stale
  Collectors imports (MovieController, UserController, TokenProvider)
- Add countUsers()/countMovies() backed by repository.count(); use them
  in PublicController (return long) and the DatabaseInitializer seed guard
- Make CustomUserDetails immutable: @Getter + private @AllArgsConstructor,
  all fields final; add ofLocalUser()/ofOAuth2User() named factories and
  withId() copy method to eliminate null arguments at call sites
- Remove mapUserToCustomUserDetails() helper from CustomUserDetailsService;
  inline via ofLocalUser()
- Simplify CustomOAuth2UserService: replace if/isEmpty Optional blocks
  with .orElseThrow() and .map().orElseGet(); use withId() after upsert
- Add UserDto.from(CustomUserDetails) overload; drop redundant DB query
  in GET /me by mapping directly from @AuthenticationPrincipal
- Move CreateMovieRequest.toDomain() to the DTO; remove Movie.from()
- Move constants to top of SecurityConfig and SwaggerConfig
- Add @NotBlank to SignUpRequest.email; fix "already been used" message